# zero2prod

./: Cargo.toml  Dockerfile  README.md  configuration.yaml  sqlx-data.json
.github/workflows/: build.yml
configuration/: base.yaml
migrations/: 20230927165718_create_subscription_table.sql  20231230161451_create_subscriptions_table.sql
scripts/: init_db.sh  initdb.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  routes.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
