[package]
name = "zero2prod"
authors = ["Param Pal Singh <singhparampal97@gmailcom>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0"
tokio = { version = "1.0", features = ["full"] }
#Environment variable access libraries
dotenvy = "0.15"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-bunyan-formatter = "0.3"
secrecy = { version = "0.6", features = ["serde"] }
tracing-actix-web = "0.5"

#Postgres access library
sqlx = {version = "0.7", default_features = false, features = ["postgres","runtime-tokio", "tls-rustls", "uuid", "chrono","macros", "migrate"]}

# Data serialization library
serde = { version = "1.0.144", features = ["derive"] }

# Other utils
chrono = {version = "0.4.22", features = ["serde"]}

[dependencies.uuid]
version = "1.4.1"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"
